# openapi/openapi.yaml
@@ -65,7 +65,6 @@ paths:
                 $ref: '#/components/schemas/Task'
         '404':
           description: Task not found
-
     delete:
       summary: Delete an existing task
       tags:
@@ -83,7 +82,84 @@ paths:
           description: Task deleted successfully
         '404':
           description: Task not found
-
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of Users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new User
+      tags:
+        - users
+      requestBody:
+        description: User created
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created User
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    put:
+      summary: Update an User
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the User to update
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The updated User
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found    
+    delete:
+      summary: Delete an User
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the User to delete
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: User deleted successfully
+        '404':
+          description: User not found
 components:
   schemas:
     Task:
@@ -96,3 +172,13 @@ components:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string          
